syntax="proto3";

option go_package = "github.com/ocfl-archive/dlza-manager/dlzamanagerproto";
option java_package = "ch.unibas.ub.dlzamanagerproto.db";
option java_outer_classname = "DlzaManagerProto";
option java_multiple_files = true;
option objc_class_prefix = "UBB";
option csharp_namespace = "Unibas.UB.DlzaManagerProto.DB";

package dlzamanagerproto;

message NoParam {}

message IdsWithSQLInterval {
  string CollectionId = 1;
  string Interval = 2;
  repeated string Ids = 3;
  repeated string CollectionsIds = 4;
}

message StatusObject {
  string Id = 1;
  string Status = 2;
  string LastChanged = 3;
}

message AmountAndSize {
  int64 Amount = 1;
  int64 Size = 2;
}

message UploaderAccessObject {
  string Key = 1;
  string Collection = 2;
}

message Pagination {
  string Id = 1;
  string SecondId = 2;
  int32 Skip = 3;
  int32 Take = 4;
  string SortDirection = 5;
  string SortKey = 6;
  repeated string AllowedTenants = 7;
  string searchField = 8;
}

message IncomingOrder {
  string CollectionAlias = 1;
  string StatusId =2;
  string FilePath = 3;
  string FileName = 4;
  string InfoFilePath = 5;
  ObjectAndFiles ObjectAndFiles = 6;
}

message Collection {
  string Alias = 1;
  string Description = 2;
  string Owner = 3;
  string OwnerMail = 4;
  string Name = 5;
  int32 Quality = 6;
  string TenantId = 7;
  string Id = 8;
  int64 TotalFileSize = 9;
  int64 TotalFileCount = 10;
  int64 TotalObjectCount = 11;
}

message Collections {
  repeated Collection collections = 1;
  int32 TotalItems = 2;
}

message StorageLocationsCombinationsForCollection {
  string Id = 1;
  string Alias = 2;
  repeated string LocationsIds = 3;
  int64 Quality = 4;
  int64 Price = 5;
  int64 Size = 6;
}

message StorageLocationsCombinationsForCollections {
    repeated StorageLocationsCombinationsForCollection StorageLocationsCombinationsForCollections = 1;
}

message CollectionAlias {
  string CollectionAlias = 1;
  repeated Id Ids = 2;
}

message CollectionAliases {
  repeated CollectionAlias CollectionAliases = 1;
}

message Id {
  string Id = 1;
}

message Ids {
  repeated Id Ids= 1;
}

message Tenant {
  string Id = 1;
  string Name = 2;
  string Alias = 3;
  string Person = 4;
  string Email = 5;
  string ApiKeyId = 6;
}

message Tenants {
  repeated Tenant tenants = 1;
  int32 TotalItems = 2;
}

message Status {
  bool ok = 1;
}

message Object {
  string Signature = 1;
  repeated  string Sets = 2;
  repeated  string Identifiers = 3 ;
  string Title = 4;
  repeated string AlternativeTitles = 5;
  string Description = 6;
  repeated string Keywords = 7;
  repeated string References = 8;
  string IngestWorkflow = 9;
  string User = 10;
  string Address = 11;
  string Created = 12;
  string LastChanged = 13;
  int64 Size = 14;
  string CollectionId =15;
  string Checksum = 16;
  string Id = 17;
  int64 TotalFileSize = 18;
  int64 TotalFileCount = 19;
  string Collection = 20;
  string Holding = 21;
  repeated string Authors = 22;
  string Expiration = 23;
  string Head = 24;
  string Versions = 25;
}

message Objects {
  repeated Object Objects = 1;
  int32 TotalItems = 2;
}

message ObjectInstance {
  string  Path = 1;
  int64 Size = 2;
  string Created = 3;
  string Status = 4;
  string StoragePartitionId = 5;
  string ObjectId = 6;
  string Id = 7;
}

message ObjectInstances {
  repeated ObjectInstance ObjectInstances = 1;
  int32 TotalItems = 2;
}

message ObjectAndFile {
  string  CollectionAlias = 1;
  string StatusId =2;
  string FilePath = 3;
  string FileName = 4;
  Object  Object = 5;
  File File = 6;
}
message InstanceWithPartitionAndObjectWithFile {
  ObjectInstance ObjectInstance = 1;
  StoragePartition StoragePartition = 2;
  Object  Object = 3;
  File File = 4;
  string  CollectionAlias = 5;
}

message ObjectAndFiles {
  string  CollectionAlias = 1;
  Object  Object = 2;
  repeated File Files = 3;
}

message InstanceWithPartitionAndObjectWithFiles {
  ObjectInstance ObjectInstance = 1;
  StoragePartition StoragePartition = 2;
  ObjectAndFiles ObjectAndFiles = 3;
}

message StorageLocations {
  repeated StorageLocation storageLocations = 1;
  int32 TotalItems = 2;
}

message StorageLocation {
  string  alias = 1;
  string  type = 2;
  string  vault = 3;
  string  connection = 4;
  int32   quality = 5;
  int32   price = 6;
  string  security_compliency = 7;
  bool    fill_first = 8;
  string  ocfl_type = 9;
  string  tenant_id = 10;
  string  id = 11;
  int32   number_of_threads = 12;
  int64   totalExistingVolume = 13;
  int64   totalFilesSize = 14;
}

message CopyFromTo {
  ObjectInstance ObjectInstance = 1;
  StorageLocation LocationCopyTo = 2;
  StoragePartition StoragePartition = 3;
}

message StoragePartition {
  string  alias = 1;
  string  name = 2;
  int64  max_size = 3;
  int64  max_objects = 4;
  int64   current_size = 5;
  int64   current_objects = 6;
  string  id = 7;
  string  storage_location_id = 8;
}

message StoragePartitions {
  repeated StoragePartition StoragePartitions = 1;
  int32 TotalItems = 2;
}

message SizeAndId {
  int64  size = 1;
  string  id = 2;
  Object Object = 3;
}

message File {
  string Checksum = 1;
  repeated string  Name = 2;
  int64    Size = 3;
  string  MimeType = 4;
  string  Pronom = 5;
  int64 Width = 6;
  int64 Height = 7;
  int64  Duration = 8;
  string Id = 9;
  string ObjectId = 10;
}

message Files {
  repeated File Files = 1;
  int32 TotalItems = 2;
}

message ObjectInstanceCheck {
  string CheckTime = 1;
  bool Error = 2;
  string Message = 3;
  string Id = 4;
  string ObjectInstanceId = 5;
}

message ObjectInstanceChecks {
  repeated ObjectInstanceCheck ObjectInstanceChecks = 1;
  int32 TotalItems = 2;
}

message MimeType {
  string Id = 1;
  int64  FileCount = 2;
  int64 FilesSize = 3;
}

message MimeTypes {
  repeated MimeType MimeTypes = 1;
  int32 TotalItems = 2;
}

message Pronom {
  string Id = 1;
  int64  FileCount = 2;
  int64 FilesSize = 3;
}

message Pronoms {
  repeated Pronom Pronoms = 1;
  int32 TotalItems = 2;
}

message AliasAndLocationsName {
  string Alias = 1;
  string LocationsName = 2;
}